# JKQtExtras

./: .gitignore  .travis.yml  CMakeLists.txt  JKQtExtrasBuildAllExamples.pro  README.md  _j_k_q_t_extras_test.html  _widget_gallery.html  annotated.html  annotated_dup.js  appveyor.yml  class_j_k_q_t_e_checkable_string_list_model-members.html  class_j_k_q_t_e_checkable_string_list_model.html  class_j_k_q_t_e_checkable_string_list_model.js  class_j_k_q_t_e_checkable_string_list_model__coll__graph.map  class_j_k_q_t_e_checkable_string_list_model__inherit__graph.md5  class_j_k_q_t_e_color_sampler-members.html  class_j_k_q_t_e_color_sampler.html  class_j_k_q_t_e_color_sampler.js  class_j_k_q_t_e_color_sampler__coll__graph.map  class_j_k_q_t_e_color_sampler__inherit__graph.md5  class_j_k_q_t_e_color_slider-members.html  class_j_k_q_t_e_color_slider.html  class_j_k_q_t_e_color_slider.js  class_j_k_q_t_e_color_slider__coll__graph.md5  class_j_k_q_t_e_color_slider__inherit__graph.map  class_j_k_q_t_e_directory_select_tool_button-members.html  class_j_k_q_t_e_directory_select_tool_button.html  class_j_k_q_t_e_directory_select_tool_button.js  class_j_k_q_t_e_directory_select_tool_button__coll__graph.map  class_j_k_q_t_e_directory_select_tool_button__coll__graph.md5  class_j_k_q_t_e_double_edit-members.html  class_j_k_q_t_e_double_edit.html  class_j_k_q_t_e_double_edit.js  class_j_k_q_t_e_double_edit__coll__graph.md5  class_j_k_q_t_e_double_edit__inherit__graph.map  class_j_k_q_t_e_enhanced_combo_box-members.html  class_j_k_q_t_e_enhanced_combo_box.html  class_j_k_q_t_e_enhanced_combo_box.js  class_j_k_q_t_e_enhanced_combo_box__coll__graph.map  class_j_k_q_t_e_enhanced_combo_box__inherit__graph.md5  (+224 more)
cmake/: jkqtextras_cmake_options.cmake  jkqtextras_common_include.cmake  jkqtextras_deployqt.cmake  jkqtextras_dumpallvariables.cmake
doc/: Doxyfile  jkqtplotter_stylesheet.css  template_verbatimgraph.txt
doc/dox/: buildinstructions.dox  examples_and_tutorials.dox  gallery.dox  jkqtextras.dox  license.dox  mainpage.dox  whatsnew.dox
examples/: CMakeLists.txt  README.md
examples/jkqtextras_test/: CMakeLists.txt  README.md  jkqtextras_test.cpp  jkqtextras_test.pro  jkqtextras_test_and_lib.pro  testmainwindow.cpp  testmainwindow.h  testmainwindow.ui
lib/: CMakeLists.txt  README.md  jkqtextras.pri  jkqtextras_version.h.in
lib/jkqtextras/: CMakeLists.txt  jkqtecheckablestringlistmodel.cpp  jkqtecheckablestringlistmodel.h  jkqtecolorsampler.cpp  jkqtecolorsampler.h  jkqtecolorslider.cpp  jkqtecolorslider.h  jkqtedoubleedit.cpp  jkqtedoubleedit.h  jkqtedoubleedit.qrc  jkqteenhancedcombobox.cpp  jkqteenhancedcombobox.h  jkqtemodernprogress.cpp  jkqtemodernprogress.h  jkqteprogresslistwidget.cpp  jkqteprogresslistwidget.h  jkqteprogresslistwidget.qrc  jkqterecentfilesmenu.cpp  jkqterecentfilesmenu.h  jkqtespecialtoolbutton.cpp  jkqtespecialtoolbutton.h  jkqtespecialtoolbutton.qrc  jkqtestarratingwidget.cpp  jkqtestarratingwidget.h  jkqtestarratingwidget.qrc  jkqteverticalscrollarea.cpp  jkqteverticalscrollarea.h  jkqtevisiblehandlesplitter.cpp  jkqtevisiblehandlesplitter.h  jkqtextras_imexport.h
lib/jkqtextras/images/: exec.svgz  fileopen.svgz  statusDone.svgz  statusFailed.svgz  statusInProgress.svgz  statusNone.svgz  statusNotStarted.svgz
qmake/sharedlib/: README.md  jkqtextraslib.pro
qmake/staticlib/: README.md  jkqtplotterlib.pro
screenshots/: README.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  (+67 more)
