cmake_minimum_required(VERSION 3.0)

message( STATUS )
message( STATUS "............................................................................." )
message( STATUS ".. BUILDING EXAMPLES" )
message( STATUS "............................................................................." )

add_subdirectory(jkqtextras_test)



